<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightGray2"
        tools:context=".login.view.LoginActivity">

    <TextView
            android:id="@+id/txtAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_72sdp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/pacifico"
            android:gravity="center_horizontal"
            android:text="@string/app_name"

            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_28ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <!-- <ImageView
            android:id="@+id/imgCoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_96sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAppName"
            app:srcCompat="@drawable/ic_coins"/>-->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinateLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/txtAppName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
                android:id="@+id/loginCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_64sdp"
                android:layout_marginBottom="@dimen/_64sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:elevation="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_8sdp">


            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_login_background">

                <EditText
                        android:id="@+id/edtUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_64sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_48sdp"
                        android:background="@drawable/edit_text_round_background"
                        android:fontFamily="@font/cambo"
                        android:hint="@string/txt_what_should_we"
                        android:inputType="textPersonName"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingTop="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_32sdp"
                        android:paddingBottom="@dimen/_8sdp"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <EditText
                        android:id="@+id/edtRole"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_64sdp"
                        android:background="@drawable/edit_text_round_background"
                        android:fontFamily="@font/cambo"
                        android:hint="@string/txt_tell_us_your_role"
                        android:inputType="textPersonName"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingTop="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_32sdp"
                        android:paddingBottom="@dimen/_8sdp"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtUserName" />

                <EditText
                        android:id="@+id/edtPassowrd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_64sdp"
                        android:background="@drawable/edit_text_round_background"
                        android:fontFamily="@font/cambo"
                        android:hint="@string/txt_password"
                        android:inputType="textPersonName"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingTop="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_32sdp"
                        android:paddingBottom="@dimen/_8sdp"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtRole" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#F48FB1"
                android:clickable="true"
                android:fontFamily="@font/copse"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_done"
                android:textAllCaps="false"
                android:textSize="@dimen/_18ssp"
                app:layout_anchor="@id/loginCardView"
                app:layout_anchorGravity="bottom|center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginCardView" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>